--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mochawesome": "^3.1.0",
     "node-cmd": "^3.0.0",
     "opn": "^5.4.0",
+    "puppeteer": "^2.1.1",
     "puppeteer-core": "^1.9.0"
   }
 }
